--- a/BMS.html
+++ b/BMS.html
@@ -188,9 +188,9 @@
                                 </div>
                                 Опыт работы
                                 <div class="experience">
-                                    Опыт работы в WebCam?
-                                    <br><input id="experience" class="skill" name="experience" type="radio" value="Да">Да
-                                    <input id="experience" class="skill" name="experience" type="radio" value="Нет">Нет
+                                    Опыт работы в WebCam?<br>
+                                    <br><label for="yes"><input id="yes" class="skill" name="experience" type="radio" value="Да">Да</label>
+                                    <label for="no"><input id="no" class="skill" name="experience" type="radio" value="Нет">Нет</label>
                                 </div>
                                 Телефон
                                 <div class="input">
