--- a/BMS.html
+++ b/BMS.html
@@ -54,46 +54,46 @@
                         <!--<img class="girl2" src="img/girl2.jpg">-->
                         <div class="colWrap">
                             <div class="colLeft">
-                                <div class="position aboutWorkPosition2">
+                                <div class="position aboutWorkPosition1">
                                     <h3>Что такое WebCam? - это работа в интернете!</h3>
-                                    <p>Вебкам — это бизнес строящийся на общении веб-модели с участниками комнаты видео-чата, в режиме онлайн. Процесс общения в основном происходит на платной основе. В зависимости от выбора модели, может быть простым флиртом или принимать более интимный характер. Таким образом, чем интереснее модель посетителям чата, и чем больше у неё поклонников готовых общаться тет-а-тет, тем выше её доход.</p>
+                                    <p>Вебкам — это бизнес строящийся на общении веб-модели с участниками комнаты видео-чата, в режиме онлайн. Процесс общения происходит на платной основе. Таким образом, чем интереснее модель посетителям чата, и чем больше у неё поклонников готовых общаться тет-а-тет, тем выше её доход.</p>
                                 </div>
-                                <div class="position aboutWorkPosition3">
+                                <div class="position aboutWorkPosition2">
                                     <h3>ОБЩЕНИЕ БЕЗ ИНТИМА!</h3>
                                     <p>Работа веб-моделью — это только трансляция и общение, ты не встречаешься с людьми вживую, ты даже не обязана на них смотреть. Диалог происходит по средствам онлайн-чата, и ты сама решаешь общаться с человеком или нет. Ты всегда можете отказать собеседнику и не делать то, чего не хочешь — участник чата может влиять на тебя только финансово. А тех, кто тебе не нравится, всегда можно забанить.</p>
                                 </div>
-                                <div class="position aboutWorkPosition6">
+                                <div class="position aboutWorkPosition3">
                                     <h3>ЛУЧШИЕ ПЛАТФОРМЫ</h3>
                                     <p>Веб-чаты — это сайты-сервисы, предоставляющие моделям функционал для трансляций, и все они крайне популярны. Большое количество таких проектов обуславливает широкий выбор разнообразных условий и различных правил. В качестве студии мы предлагаем работу для девушек исключительно на зарубежных ресурсах и обеспечиваем помощь в их использовании. Поэтому работая моделью видеочата с нами, ты легко сможешь выбрать зарубежный веб-чат по своему вкусу или использовать сразу несколько.</p>
                                 </div>
-                                <div class="position aboutWorkPosition5">
+                                <div class="position aboutWorkPosition4">
                                     <h3>ОБЩЕНИЕ И ФЛИРТ</h3>
                                     <p>Для многих мужчин вебкам — это возможность пообщаться с красивыми девушками, отдохнуть от семейной жизни и пофлиртовать без обязательств. Поэтому твоя задача в процессе работы, максимально долго удерживать внимание зрителя на себе в трансляции. Работа моделью видеочата подразумевает две категории: <span class="logoText"> FLIRT</span> — обычное общение без обнажения и <span class="logoText">HOT FLIRT</span> — по просьбе своих собеседников ты можешь вести себя более раскрепощённо. В любом случае, ты сама выбираешь, с кем идти на контакт, и как себя вести.</p>
                                 </div>
-                                <div class="position aboutWorkPosition4">
+                                <div class="position aboutWorkPosition5">
                                     <h3>СКОЛЬКО ТЫ МОЖЕШЬ ЗАРАБОТАТЬ?</h3>
                                     <p>За границей работа веб-моделью приравнивается к высокодоходной, поэтому зарабатывать ты будешь много — общаясь с иностранцами из богатых стран. Профессиональные модели нашей студии могут получать от <span class="earn"> 3000$</span> в месяц. Средняя зарплата <span class="earn"> 2000$</span>  . Будь более креативной, займись своей красотой, научись понимать мужчин и вкладывай деньги в себя. Работай с нами и зарабатывай <span class="earn"> 2000$</span> и больше.</p>
                                 </div>
                             </div>
                             <div class="colRight">
-                                <div class="position aboutWorkPosition1">
+                                <div class="position aboutWorkPosition6">
                                     <h3>ФЛИРТУЙ НА ВЕБ-КАМЕРУ</h3>
                                     <p>Студия <span class="logoText">«BMS»</span> предлагает тебе услуги по успешному введению в профессию вебкам-модели. От первых шагов — до полной реализации всего потенциала. Тебя ждут: индивидуальные интерьеры, профессиональная техника, подиумный свет, обучение от топ-моделей, опытный оператор-переводчик, гибкий график работы с ежедневными выплатами и высокий заработок.</p>
                                     <p>Заработная плата от <span class="earn">1000$</span> с первого месяца</p>
                                 </div>
-                                <div class="position aboutWorkPosition9">
+                                <div class="position aboutWorkPosition7">
                                     <h3>РАБОТАЙ В СТУДИИ</h3>
                                     <p>От тебя требуется присущее всем девушкам очарование и желание работать в вебкам-индустрии, всё остальное организует наша студия. Мы предоставляем удобные комнаты со всем необходимым оборудованием для работы вебкам-модели. А команда специалистов в лице операторов, администраторов и техподдержки круглосуточно обеспечивает эффективное общение с участниками комнаты и грамотную постановку процесса. Опыт работы при этом совершенно не важен!</p>
                                 </div>
-                                <div class="position aboutWorkPosition12">
+                                <div class="position aboutWorkPosition8">
                                     <h3>СВОБОДНЫЙ ГРАФИК</h3>
                                     <p>График работы современной веб-модели составляет 5 дней в неделю по 5-8 часов в смену, с часовыми перерывами на обед и отдых. Основная часть рабочего времени — общение с поклонниками. Студия доступна круглосуточно, а значит, ты можешь выбрать для себя наиболее подходящий период, распланировав своё рабочее время так, чтобы оно идеально сочеталось с твоим ритмом жизни. Составь свой индивидуальный график и зарабатывай, когда тебе удобно!</p>
                                 </div>
-                                <div class="position aboutWorkPosition13">
+                                <div class="position aboutWorkPosition9">
                                     <h3>ОПЫТ НЕ ТРЕБУЕТСЯ</h3>
                                     <p>Всему, что требуется знать, мы обучим непосредственно в нашей студии. Ознакомительная часть с основами профессии вебкам-модели идёт на собеседовании. В первый рабочий день производится регистрация и основная часть обучения, включая пробный выход в эфир . Поверь, это даже проще, чем звучит. Ты быстро освоишься!</p>
                                 </div>
-                                <div class="position aboutWorkPosition14">
+                                <div class="position aboutWorkPosition10">
                                     <h3>ПОДТЯНИ АНГЛИЙСКИЙ</h3>
                                     <p>Для работы вебкам-моделью тебе совершенно не требуется знание иностранных языков. Практика показала, что в течение месяца модель самостоятельно может свободно научиться понимать и печатать всё, что ей нужно для успешной работы. Поэтому это ещё один повод попробовать себя в качестве модели видеочата — общайся и совершенствуй навыки иностранных языков!</p>
                                 </div>
@@ -176,6 +176,14 @@
                         </div>
                     </div>
                     <div class="form">
+                        <div class="contact">
+                            <h2>Оставь свою заявку</h2>
+                            <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
+                            <div class="favicon">
+                                <span class="earn">Или просто напиши нам в телеграм  </span>
+                                <a href="" class="telegram"></a>
+                            </div>
+                        </div>
                         <div class="formWrap">
                             <form>
                                 Имя
@@ -201,14 +209,6 @@
                                 </div>
                                 <button class="apply formBtn">Отправить заявку</button>
                             </form>
-                        </div>
-                        <div class="contact">
-                            <h2>Оставь свою заявку</h2>
-                            <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
-                            <div class="favicon">
-                                <span class="earn">Или просто напиши нам в телеграм  </span>
-                                <a href="" class="telegram"></a>
-                            </div>
                         </div>
                     </div>
                 </section>
@@ -240,13 +240,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footerBorder"></div>
                     <ul class="footerNetwork">
                         <li><a href="#">FaceBook</a></li>
                         <li><a href="#">Instagram</a></li>
                         <li><a href="#">Masseger</a></li>
                     </ul>
-                    <div class="footerBorder"></div>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
                     </div>
