--- a/BMS.html
+++ b/BMS.html
@@ -237,7 +237,15 @@
                             <p>Студия «BMS» предлагает девушкам стабильный доход и комфортные условия работы, помогая планомерно погрузиться в тонкости вебкам-индустрии. Студия «BMS» не предоставляет и не является посредником в предоставлении услуг интимного характера. Для лиц старше 18 лет.</p>
                             <div>
                                 <div class="city">г. Харьков</div>
-                                <div><a href="#" class="connectUs">Связаться с нами в телеграм<a href="#" class="telegram"></a></a><br><a href="#" class="mail">BMS@gmail.com</a></div>
+                                <div>
+                                    <a href="#" class="connectUs">Связаться с нами в телеграм</a>
+                                </div>
+                                <div>
+                                    <a href="#" class="telegram"></a>
+                                </div>
+                                <div>
+                                    <a href="#" class="mail">brilliantStudio@gmail.com</a>
+                                </div>
                             </div>
                         </div>
                     </div>
