--- a/BMS.html
+++ b/BMS.html
@@ -17,13 +17,13 @@
                         <strong class="logo">BMS</strong>
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
-                            <li>О работе</li>
-                            <li>Преимущества</li>
-                            <li>Вакансии</li>
-                            <li>Отзывы</li>
-                            <li>Вопросы</li>
-                            <li>О нас</li>
-                            <li>Контакты</li>
+                            <li><a href="#aboutWork">О работе</a></li>
+                            <li><a href="#advantages">Преимущества</a></li>
+                            <li><a href="#">Вакансии</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Вопросы</a></li>
+                            <li><a href="#aboutUs">О нас</a></li>
+                            <li><a href="#atention">Контакты</a></li>
                         </ul>
                         <div class="sideMenu">
                             <div></div>
@@ -41,7 +41,7 @@
                             <img class="mainLogoGirl" src="img/girl.jpg" align="right">
                         </div>
                     </div>
-                    <div class="aboutUsWrap">
+                    <div class="aboutUsWrap" id="aboutUs">
                         <div class="aboutUs">
                             <h2>WebCam-studio <span class="logoText">«Brilliant models»</span></h2>
                             <p>Это новый уровень WebCam студий для лучших моделей. Наш опыт в сфере WebCam позволяет обеспечивать наших моделей стабильным доходом в любое время дня и ночи! Мы умеем выстраивать работу лучше других!</p>
@@ -50,7 +50,7 @@
                             <button class="apply">Оставить заявку</button>
                         </div>
                     </div>
-                    <div class="aboutWork">
+                    <div class="aboutWork" id="aboutWork">
                         <h1>О работе WebCam-моделью</h1>
                         <!--<img class="girl2" src="img/girl2.jpg">-->
                         <div class="colWrap">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="advantages">
+                    <div class="advantages" id="advantages">
                         <div class="advantagesWrap">
                             <h3>Наши преимущества</h3>
                             <div class="advantagesItems">
@@ -182,7 +182,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм  </span>
-                                <a href="" class="telegram"></a>
+                                <a href="https://web.telegram.org/k/" class="telegram"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -233,7 +233,7 @@
                                 <li><a href="#">Вакансия веб-модель</a></li>
                             </ul>
                         </div>
-                        <div class="atention">
+                        <div class="atention" id="atention">
                             <p>Студия «BMS» предлагает девушкам стабильный доход и комфортные условия работы, помогая планомерно погрузиться в тонкости вебкам-индустрии. Студия «BMS» не предоставляет и не является посредником в предоставлении услуг интимного характера. Для лиц старше 18 лет.</p>
                             <div>
                                 <div class="city">г. Харьков</div>
@@ -241,10 +241,10 @@
                                     <a href="#" class="connectUs">Связаться с нами в телеграм</a>
                                 </div>
                                 <div>
-                                    <a href="#" class="telegram"></a>
+                                    <a href="https://web.telegram.org/k/" class="telegram telegramFooter"></a>
                                 </div>
-                                <div>
-                                    <a href="#" class="mail">brilliantStudio@gmail.com</a>
+                                <div class="mail">
+                                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliantStudio@gmail.com</a>
                                 </div>
                             </div>
                         </div>
