--- a/BMS.html
+++ b/BMS.html
@@ -9,12 +9,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oleo+Script:wght@700&family=Playball&family=Shrikhand&family=Tourney:ital,wght@1,200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oleo+Script&display=swap" rel="stylesheet">
     <body class="body">
-	
-		<div class="main">
+		<div class="main" id="top">
             <div class="page">
                 <header class="header">
                     <div class="headerWrap">
-                        <strong class="logo">BMS</strong>
+                        <strong class="logo"><a href="#top">BMS</a></strong>
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
                             <li><a href="#aboutWork">О работе</a></li>
@@ -182,7 +181,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм  </span>
-                                <a href="https://web.telegram.org/k/" class="telegram"></a>
+                                <a href="https://t.me/k" class="telegram"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -241,7 +240,7 @@
                                     <a href="#" class="connectUs">Связаться с нами в телеграм</a>
                                 </div>
                                 <div>
-                                    <a href="https://web.telegram.org/k/" class="telegram telegramFooter"></a>
+                                    <a href="https://t.me/k" class="telegram telegramFooter"></a>
                                 </div>
                                 <div class="mail">
                                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliantStudio@gmail.com</a>
@@ -260,6 +259,17 @@
                 </footer>
             </div>
 		</div>
+        <div class="mobSideMenu">
+            <ul class="mobSideMenuLi">
+                <li><a href="#aboutWork">О работе</a></li>
+                <li><a href="#advantages">Преимущества</a></li>
+                <li><a href="#">Вакансии</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="#">Вопросы</a></li>
+                <li><a href="#aboutUs">О нас</a></li>
+                <li><a href="#atention">Контакты</a></li>
+            </ul>
+        </div>
         <script src="js/main.js"></script>
 	</body>
 </html>
