--- a/BMS.html
+++ b/BMS.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oleo+Script:wght@700&family=Playball&family=Shrikhand&family=Tourney:ital,wght@1,200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Oleo+Script&display=swap" rel="stylesheet">
+    </head>
     <body class="body">
 		<div class="main" id="top">
             <div class="page">
@@ -16,13 +17,13 @@
                         <strong class="logo"><a href="#top">BMS</a></strong>
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
-                            <li><a href="#aboutWork">О работе</a></li>
-                            <li><a href="#advantages">Преимущества</a></li>
-                            <li><a href="#">Вакансии</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Вопросы</a></li>
-                            <li><a href="#aboutUs">О нас</a></li>
-                            <li><a href="#atention">Контакты</a></li>
+                            <li><a class="scroll-to" href="#aboutWork">О WebCam</a></li>
+                            <li><a class="scroll-to" href="#advantages">Преимущества</a></li>
+                            <li><a href="BMSVacancies.html">Вакансии</a></li>
+                            <li><a href="BMSCallBack.html">Отзывы</a></li>
+                            <li><a class="scroll-to" href="#">Вопросы</a></li>
+                            <li><a class="scroll-to" href="#aboutUs">Студия</a></li>
+                            <li><a class="scroll-to" href="#atention">Контакты</a></li>
                         </ul>
                         <div class="sideMenu">
                             <div></div>
@@ -43,10 +44,10 @@
                     <div class="aboutUsWrap" id="aboutUs">
                         <div class="aboutUs">
                             <h2>WebCam-studio <span class="logoText">«Brilliant models»</span></h2>
-                            <p>Это новый уровень WebCam студий для лучших моделей. Наш опыт в сфере WebCam позволяет обеспечивать наших моделей стабильным доходом в любое время дня и ночи! Мы умеем выстраивать работу лучше других!</p>
+                            <p>Это новый уровень WebCam студий для лучших моделей. Наш опыт в сфере WebCam позволяет обеспечивать наших моделей стабильным доходом в любое время дня и ночи! Мы в сфере WebCam c 2007 года и мы умеем выстраивать работу лучше других!</p>
                             <p>Наша уютная студия находится в самом сердце Харькова, работает с международными площадками, лучшим оборудованием, качественным светом, правильными интерьерами, круглосуточной поддержкой! Мы имеем всё для того, чтобы ваш доход вместе с нами достиг новых высот! Мы помогаем зарабатывать и гарантируем полную конфиденциальность.</p>
                             <p>Мы сотрудничаем, как с опытными вебкам-моделями, так и с теми, кто только недавно открыл для себя удивительный мир вебкама. Если вы хотите получать стабильный доход и ищете комфортные условия работы, отправте заявку прямо сейчас! Мы продолжаем активно расти и готовы принять в команду новых моделей!</p>
-                            <button class="apply">Оставить заявку</button>
+                            <button class="apply"><a href="#form">Оставить заявку</a></button>
                         </div>
                     </div>
                     <div class="aboutWork" id="aboutWork">
@@ -144,7 +145,7 @@
                         </div>
                     </div>
                     <div class="applyBtn">
-                        <button class="apply apply1">Оставить заявку</button>
+                        <button class="apply apply1"><a href="#form">Оставить заявку</a></button>
                     </div>
                     <div class="interest">
                         <div class="interestPadding">
@@ -181,7 +182,7 @@
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
                                 <span class="earn">Или просто напиши нам в телеграм  </span>
-                                <a href="https://t.me/k" class="telegram"></a>
+                                <a href="https://t.me/k" class="telegram" id="form"></a>
                             </div>
                         </div>
                         <div class="formWrap">
@@ -234,24 +235,27 @@
                         </div>
                         <div class="atention" id="atention">
                             <p>Студия «BMS» предлагает девушкам стабильный доход и комфортные условия работы, помогая планомерно погрузиться в тонкости вебкам-индустрии. Студия «BMS» не предоставляет и не является посредником в предоставлении услуг интимного характера. Для лиц старше 18 лет.</p>
-                            <div>
-                                <div class="city">г. Харьков</div>
-                                <div>
-                                    <a href="#" class="connectUs">Связаться с нами в телеграм</a>
-                                </div>
-                                <div>
-                                    <a href="https://t.me/k" class="telegram telegramFooter"></a>
-                                </div>
-                                <div class="mail">
-                                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliantStudio@gmail.com</a>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
+                    <div class="ourContacts">
+                        <h2>Наши контакты</h2>
+                        <div class="city">г. Харьков</div>
+                        <div class="ourContactCol">
+                            <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
+                            <a href="#form">или оставте свою заявку на сайте в форме</a>
+                            <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
+                        </div>
+                        <div>
+                            <a href="https://t.me/k" class="telegram telegramFooter"></a>
+                        </div>
+                        <div class="mail">
+                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliantStudio@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
-                        <li><a href="#">FaceBook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Masseger</a></li>
+                        <li><a href="https://www.facebook.com/">FaceBook</a></li>
+                        <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        <li><a href="https://t.me/">Telegram</a></li>
                     </ul>
                     <div class="footerPolicy">
                         <div class="license">© Вебкам-студия «BMS» в Харькове, 2007-2021 г. Все права защищены.</div>
