--- a/BMS.html
+++ b/BMS.html
@@ -14,7 +14,7 @@
             <div class="page">
                 <header class="header">
                     <div class="headerWrap">
-                        <strong class="logo"><a href="#top">BMS</a></strong>
+                        <strong class="logo"><a class="scroll-to" href="#top">BMS</a></strong>
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
                             <li><a class="scroll-to" href="#aboutWork">О WebCam</a></li>
@@ -116,7 +116,7 @@
                                     </div>
                                     <div class="advantage advPhoto2">
                                         <h4>Дружелюбный коллектив</h4>
-                                        <p>Мы придерживаем приятную и дружескую атмосферу в нашей студии: руководство твой друг, помощник и наставник. У нас нет гипер-отчетности и больших штрафов!</p>
+                                        <p>Мы придерживаем приятную и дружескую атмосферу в нашей студии: руководство твой друг, помощник и наставник. У нас нет гипер-отчетности и штрафов!</p>
                                     </div>
                                     <div class="advantage advPhoto3">
                                         <h4>Обучение</h4>
@@ -265,13 +265,14 @@
 		</div>
         <div class="mobSideMenu">
             <ul class="mobSideMenuLi">
-                <li><a href="#aboutWork">О работе</a></li>
-                <li><a href="#advantages">Преимущества</a></li>
-                <li><a href="#">Вакансии</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Вопросы</a></li>
-                <li><a href="#aboutUs">О нас</a></li>
-                <li><a href="#atention">Контакты</a></li>
+                <li class="hideWrap"><a class="hide"></a></li>
+                <li><a class="scroll-to" href="#aboutWork">О работе</a></li>
+                <li><a class="scroll-to" href="#advantages">Преимущества</a></li>
+                <li><a href="BMSVacancies.html">Вакансии</a></li>
+                <li><a href="BMSCallBack.html">Отзывы</a></li>
+                <li><a href="BMSQuestions.html">Вопросы</a></li>
+                <li><a class="scroll-to" href="#aboutUs">О нас</a></li>
+                <li><a class="scroll-to" href="#atention">Контакты</a></li>
             </ul>
         </div>
         <script src="js/main.js"></script>
