--- a/BMSVacancies.html
+++ b/BMSVacancies.html
@@ -81,13 +81,7 @@
 		</div>
         <div class="mobSideMenu">
             <ul class="mobSideMenuLi">
-                <li><a href="#aboutWork">О работе</a></li>
-                <li><a href="#advantages">Преимущества</a></li>
-                <li><a href="#">Вакансии</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Вопросы</a></li>
-                <li><a href="#aboutUs">О нас</a></li>
-                <li><a href="#atention">Контакты</a></li>
+                <li><a href="BMS.html">Вернуться назад</a></li>
             </ul>
         </div>
         <script src="js/main.js"></script>
