--- a/BMSCallBack.html
+++ b/BMSCallBack.html
@@ -17,13 +17,11 @@
                         <strong class="logo"><a href="#top">BMS</a></strong>
                         <!--<button class="btn">Оставить заявку</button>-->
                         <ul class="navigation">
-                            <li><a href="BMS.html">Вернуться назад</a></li>
+                            <li><a href="index.html">Вернуться назад</a></li>
                         </ul>
-                        <div class="sideMenu">
-                            <div></div>
-                            <div></div>
-                            <div></div>
-                        </div>
+                        <ul class="linkToStartWrap">
+                            <a class="linkToStart" href="index.html">Вернуться назад</a>
+                        </ul>
                     </div>
                 </header>
                 <section class="content">
@@ -34,19 +32,19 @@
                         <div class="aboutBMS">
                             <h3>О студии</h3>
                             <ul>
-                                <li><a href="#">WebCam-Студия</a></li>
-                                <li><a href="#">Вакансии</a></li>
-                                <li><a href="#">Отзывы</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a class="scroll-to" href="#aboutUs">WebCam-Студия</a></li>
+                                <li><a href="BMSVacancies.html">Вакансии</a></li>
+                                <li><a href="BMSCallBack.html">Отзывы</a></li>
+                                <li><a class="scroll-to" href="#atention">Контакты</a></li>
                             </ul>
                         </div>
                         <div class="ourServices">
                             <h3>Наши услуги</h3>
                             <ul>
-                                <li><a href="#">Работа вебкам</a></li>
-                                <li><a href="#">Работа для девушек</a></li>
-                                <li><a href="#">Работа на дому</a></li>
-                                <li><a href="#">Вакансия веб-модель</a></li>
+                                <li><a class="scroll-to" href="#form">Работа вебкам</a></li>
+                                <li><a class="scroll-to" href="#form">Работа для девушек</a></li>
+                                <li><a class="scroll-to" href="#form">Работа на дому</a></li>
+                                <li><a class="scroll-to" href="#form">Вакансия веб-модель</a></li>
                             </ul>
                         </div>
                         <div class="atention" id="atention">
@@ -65,7 +63,7 @@
                             <a href="https://t.me/k" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
-                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliantStudio@gmail.com</a>
+                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
@@ -79,11 +77,6 @@
                 </footer>
             </div>
 		</div>
-        <div class="mobSideMenu">
-            <ul class="mobSideMenuLi">
-                <li><a href="BMS.html">Вернуться назад</a></li>
-            </ul>
-        </div>
         <script src="js/main.js"></script>
 	</body>
 </html>
