--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <p>Это новый уровень WebCam студий для лучших моделей. Наш опыт в сфере WebCam позволяет обеспечивать наших моделей стабильным доходом в любое время дня и ночи! Мы в сфере WebCam c 2007 года и мы умеем выстраивать работу лучше других!</p>
                             <p>Наша уютная студия находится в самом сердце Харькова, работает с международными площадками, лучшим оборудованием, качественным светом, правильными интерьерами, круглосуточной поддержкой! Мы имеем всё для того, чтобы ваш доход вместе с нами достиг новых высот! Мы помогаем зарабатывать и гарантируем полную конфиденциальность.</p>
                             <p>Мы сотрудничаем, как с опытными вебкам-моделями, так и с теми, кто только недавно открыл для себя удивительный мир вебкама. Если вы хотите получать стабильный доход и ищете комфортные условия работы, отправте заявку прямо сейчас! Мы продолжаем активно расти и готовы принять в команду новых моделей!</p>
-                            <button class="apply"><a href="#form">Оставить заявку</a></button>
+                            <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
                     </div>
                     <div class="aboutWork" id="aboutWork">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="applyBtn">
-                        <button class="apply apply1"><a href="#form">Оставить заявку</a></button>
+                        <button class="apply apply1"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                     </div>
                     <div class="interest">
                         <div class="interestPadding">
@@ -181,7 +181,7 @@
                             <h2>Оставь свою заявку</h2>
                             <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
                             <div class="favicon">
-                                <span class="earn">Или просто напиши нам в телеграм  </span>
+                                <span class="earn">Или просто напиши нам в телеграм по ссылке ниже:</span>
                                 <a href="https://t.me/k" class="telegram" id="form"></a>
                             </div>
                         </div>
@@ -243,13 +243,15 @@
                         <div class="ourContactCol">
                             <a href="https://t.me/" class="connectUs">Напишите нами в телеграм</a>
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
-                            <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
+                            <button class="apply formBtn btnContact"><a class="scroll-to" href="#form">Оставить заявку</a></button>
                         </div>
-                        <div>
+                        <div class="telegramFooterWrap">
+                            <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
                             <a href="https://t.me/k" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
-                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliant.studio.kh@gmail.com</a>
+                            <p>Напишите нам на почту по ссылке ниже:</p>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
