--- a/BMSCallBack.html
+++ b/BMSCallBack.html
@@ -59,11 +59,13 @@
                             <a href="#form">или оставте свою заявку на сайте в форме</a>
                             <button class="apply formBtn btnContact"><a href="#form">Оставить заявку</a></button>
                         </div>
-                        <div>
+                        <div class="telegramFooterWrap">
+                            <p>Перейдите по ссылке ниже на наш телеграм канал:</p>
                             <a href="https://t.me/k" class="telegram telegramFooter"></a>
                         </div>
                         <div class="mail">
-                            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZWxvJQTPHTGZGQxvWSnGngNvpwNsktnBWgGHDTksJfFnMwSdbNBrjDDRjkfHPNLFmfQVV" >brilliant.studio.kh@gmail.com</a>
+                            <p>Напишите нам на почту по ссылке ниже:</p>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
