--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         </div>
                         <div class="mail">
                             <p>Напишите нам на почту по ссылке ниже:</p>
-                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с посетителем BMS" >brilliant.studio.kh@gmail.com</a>
+                            <a href="mailto:brilliant.studio.kh@gmail.com?subject=Диалог с BrilliantModels" >brilliant.studio.kh@gmail.com</a>
                         </div>
                     </div>
                     <ul class="footerNetwork">
