--- a/BMSVacancies.html
+++ b/BMSVacancies.html
@@ -25,7 +25,62 @@
                     </div>
                 </header>
                 <section class="content">
-
+                    <div class="aboutUsWrap" id="aboutUs">
+                        <div class="aboutUs">
+                            <h2>Вакансия <span class="logoText">«Модели»</span></h2>
+                            <p>Вакансия открыта:</p>
+                            <p>Стать нашей моделью может практически любая совершеннолетняя девушка.</p>
+                            <p>Внешние данные для работы вебкам-моделью не важны: главное любить общаться, уметь поддержать интересный разговор.</p>
+                            <p>В ваши обязанности будет входить общение в онлайн-видеочате на иностранных платформах. Вы будете общаться с различными людьми на платной основе.</p>
+                            <p>Вакансия вебкам-модели доступна для девушек старше 18 лет, без ограничений по комплекции и дресс-коду. Для начинающих моделей мы предоставляем приятные бонусы и бесплатное обучение. Новые сотрудники получают свой заработок сразу после смены ежедневно. Только на нашей Brilliant Studio предусмотрена уникальная бонусная система для моделей. Все условия и бонусы подбираются для моделей индивидуально, по завершению первого месяца работы.</p>
+                            <h2>Заработок от 2000$ в месяц</h2>
+                            <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
+                        </div>
+                    </div>
+                    <div class="aboutUsWrap" id="aboutUs">
+                        <div class="aboutUs">
+                            <h2>Вакансия <span class="logoText">«Рекрутера»</span> по поиску моделей</h2>
+                            <p>Вакансия открыта:</p>
+                            <p>Требуется рекрутер по поиску моделей, зарплата сдельная, зависит от количества найденых моделей.</p>
+                            <button class="apply"><a class="scroll-to" href="#form">Оставить заявку</a></button>
+                        </div>
+                    </div>
+                    <div class="form">
+                        <div class="contact">
+                            <h2>Оставь свою заявку</h2>
+                            <p>Если ты ищешь высокооплачиваемую работу в Харькове и тебя заинтересовала вакансия веб-модели, хочешь задать дополнительные вопросы или тебе просто интересно узнать о тонкостях работы веб-модели, тогда заполни данную анкету и мы свяжемся с тобой в ближайшее время.</p>
+                            <div class="favicon">
+                                <span class="earn">Или просто напиши нам в телеграм по ссылке ниже:</span>
+                                <a href="https://t.me/k" class="telegram" id="form"></a>
+                            </div>
+                        </div>
+                        <div class="formWrap">
+                            <form action="sendmail.php" method="Post">
+                                Имя
+                                <div class="input">
+                                    <input id="name" class="name" name="name" type="text" required placeholder="Введите ваше имя...">
+                                </div>
+                                Возраст
+                                <div class="input">
+                                    <input id="age" class="age" type="text" name="age" required placeholder="Введите ваш возраст...">
+                                </div>
+                                Опыт работы
+                                <div class="experience">
+                                    Опыт работы в WebCam?<br>
+                                    <br><label for="yes"><input id="yes" class="skill" name="experience" type="radio" value="yes">Да</label>
+                                    <label for="no"><input id="no" class="skill" name="experience" type="radio" value="no">Нет</label>
+                                </div>
+                                Телефон
+                                <div class="input">
+                                    <input id="tel" class="tel" type="text" name="phone" required placeholder="Ваш номер +38(0xx)xxx-xx-xx">
+                                </div>
+                                <div class="input">
+                                    <textarea id="sms" class="sms" name="message" placeholder="Ваше сообщение..."></textarea>
+                                </div>
+                                <button class="apply formBtn">Отправить заявку</button>
+                            </form>
+                        </div>
+                    </div>
                 </section>
                 <footer class="footer">
                     <div class="footerWrap">
